fix(Header): remove margin-bottom on header which no longer collapses because main has overflow: hidden;

--- a/docs/components/Home/Banner/style.css
+++ b/docs/components/Home/Banner/style.css
@@ -1,11 +1,15 @@
-.d-eri-icon {
+.d-banner {
+  margin-top: var(--e-space-4);
+}
+
+.d-banner__icon {
   --size: 4em;
 
   animation: d-draw var(--e-time-2) linear forwards;
   animation-delay: var(--e-time-1);
   display: block;
   height: var(--size);
-  margin: 0 auto;
+  margin: 0 auto 0;
   stroke-dasharray: 2.5;
   stroke-dashoffset: 2.5;
   width: var(--size);
